<resources>
    <string name="app_name">Premier League</string>

    <!-- main strings -->
    <string name="fixtures">Matches</string>
    <string name="results">Table</string>
    <string name="loading_error">Loading error</string>
    <string name="loading">Loading…</string>
    <string name="not_available">"n/a"</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>

    <!-- team strings -->
    <string name="squad_market_value">Squad market value: %s</string>
    <string name="player_age">Age: %d</string>

    <!-- search strings -->
    <string name="search_empty">No data</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Team name or goals count</string>


    <!-- fixtures strings -->
    <string name="fixture_end">Match ended</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="half_year">Half year</string>

    <!--STANDINGS_HEADER_STRINGS-->
    <string name="standings_header_team">Team</string>
    <string name="standings_header_points">Pts</string>

    <!--STANDINGS_GENERAL_STRINGS-->
    <string name="error_please_try_again_refresh_your_table">Error. Please, try again refresh your table</string>
    <string name="standings_wins">W</string>
    <string name="standings_draws">D</string>
    <string name="standings_losses">L</string>

    <!--STANDINGS_ITEM_CHILD_STRINGS-->
    <string name="standings_home_block">HOME</string>
    <string name="standings_away_block">AWAY</string>
    <string name="standings_goals_scored">Goals scored</string>
    <string name="standings_goals_against">Goals against</string>
    <string name="standings_more_details">MORE DETAILS</string>

    <!--STANDINGS_MENU-->
    <string name="standings_menu_sort_table">Sort table</string>
    <string name="standings_menu_by_points">By points</string>
    <string name="standings_menu_by_scored_goals">By scored goals</string>
    <string name="standings_menu_by_against_goals">By against goals</string>
    <string name="standings_menu_sorting_a_z">A - Z</string>
    <string name="standings_menu_sorting_z_a">Z - A</string>

</resources>
