<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/standings_background_header">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/standings_header_team"
                android:textColor="@color/standings_text_primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/standings_wins"
                    android:textColor="@color/standings_text_primary_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/standings_draws"
                    android:textColor="@color/standings_text_primary_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/standings_losses"
                    android:textColor="@color/standings_text_primary_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp">

                <TextView
                    android:id="@+id/standingsPoints"
                    android:layout_gravity="end|center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/standings_header_points"
                    android:textColor="@color/standings_text_primary_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:background="@color/standings_divider_header_color"
        android:layout_gravity="bottom"
        android:layout_height="1dp"
        android:layout_width="match_parent" />
</FrameLayout>