<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemStandingsChild"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/standings_home_block"
                    android:textColor="@color/standings_text_secondary_color"
                    android:textSize="20sp" />
            </FrameLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/standings_text_primary_color"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/standings_away_block"
                    android:textColor="@color/standings_text_secondary_color"
                    android:textSize="20sp" />
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/standings_goals_scored"
            android:textColor="@color/standings_positive_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/standings_wins"
                        android:textColor="@color/standings_text_primary_color"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/standings_draws"
                        android:textColor="@color/standings_text_primary_color"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/standings_losses"
                        android:textColor="@color/standings_text_primary_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/standingsChildHomeWins"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/standings_text_secondary_color"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/standingsChildHomeDraws"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/standings_text_secondary_color"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/standingsChildHomeLosses"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/standings_text_secondary_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:max="100"
                        android:progress="60"
                        android:progressDrawable="@drawable/style_progress_standings_goals_ratio"
                        android:secondaryProgress="100" />

                    <TextView
                        android:id="@+id/standingsChildGoalsDifference"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/standings_positive_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start|top"
                    android:layout_margin="2dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/circle_standings_goals_scored"/>

                    <TextView
                        android:id="@+id/standingsChildHomeGoalsScored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/standings_positive_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|top"
                    android:layout_margin="2dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/circle_standings_goals_scored"/>

                    <TextView
                        android:id="@+id/standingsChildAwayGoalsScored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/standings_positive_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start|bottom"
                    android:layout_margin="2dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/circle_standings_goals_against"/>

                    <TextView
                        android:id="@+id/standingsChildHomeGoalsAgainst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/standings_negative_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="2dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/circle_standings_goals_against"/>

                    <TextView
                        android:id="@+id/standingsChildAwayGoalsAgainst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/standings_negative_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/standings_wins"
                        android:textColor="@color/standings_text_primary_color"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/standings_draws"
                        android:textColor="@color/standings_text_primary_color"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/standings_losses"
                        android:textColor="@color/standings_text_primary_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/standingsChildAwayWins"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/standings_text_secondary_color"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/standingsChildAwayDraws"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/standings_text_secondary_color"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/standingsChildAwayLosses"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/standings_text_secondary_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/standings_goals_against"
            android:textColor="@color/standings_negative_color"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>